tests/golden/expected/rulebook_nodefault.stdout.txt
Compile error: tests/fixtures/rulebook_nodefault.lamp:7: rulebook requires a 'default' value
  7 | rulebook int two(int n):
    | ^
